testdata/baselines/reference/submodule/compiler/parserUnparsedTokenCrash1.errors.txt
a.js(1,3): error TS2304: Cannot find name 'y'.
a.js(1,9): error TS1005: ')' expected.
a.js(1,13): error TS1005: ';' expected.


==== a.js (3 errors) ====
    ( y = 1 ; 2 )
      ~
!!! error TS2304: Cannot find name 'y'.
            ~
!!! error TS1005: ')' expected.
                ~
!!! error TS1005: ';' expected.
    